--- a/packages/modules/data-widgets/package.json
+++ b/packages/modules/data-widgets/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@mendix/data-widgets",
     "moduleName": "Data Widgets",
-    "version": "2.30.5",
+    "version": "2.31.0",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
     "license": "Apache-2.0",
     "private": true,
@@ -27,13 +27,13 @@
     },
     "moduleFolderNameInModeler": "datawidgets",
     "marketplace": {
-        "minimumMXVersion": "10.12.6.46815",
+        "minimumMXVersion": "10.21.0.64362",
         "appNumber": 116540,
         "appName": "Data Widgets"
     },
     "testProject": {
         "githubUrl": "https://github.com/mendix/DataWidgets-module",
-        "branchName": "main"
+        "branchName": "mts/10.21"
     },
     "scripts": {
         "build:deps": "turbo run build --filter=data-widgets^...",
