chore: fix imports and remove old modules

--- a/packages/shared/widget-plugin-filtering/tsconfig.json
+++ b/packages/shared/widget-plugin-filtering/tsconfig.json
@@ -1,6 +1,6 @@
 {
     "extends": "@mendix/tsconfig-web-widgets/esm-library-with-jsx",
-    "include": ["./src/**/*"],
+    "include": ["./src/**/*", "../widget-plugin-dropdown-filter/src/controllers/PickerChangeHelper.ts"],
     "compilerOptions": {
         "outDir": "./dist",
         "rootDir": "./src",
