--- a/packages/shared/widget-plugin-filtering/package.json
+++ b/packages/shared/widget-plugin-filtering/package.json
@@ -34,6 +34,8 @@
     "dependencies": {
         "@floating-ui/react": "^0.26.27",
         "@floating-ui/react-dom": "^2.1.2",
+        "@mendix/filter-commons": "workspace:*",
+        "@mendix/widget-plugin-dropdown-filter": "workspace:*",
         "@mendix/widget-plugin-external-events": "workspace:*",
         "@mendix/widget-plugin-hooks": "workspace:*",
         "@mendix/widget-plugin-mobx-kit": "workspace:^",
