--- a/packages/shared/filter-commons/package.json
+++ b/packages/shared/filter-commons/package.json
@@ -28,7 +28,8 @@
         "dev": "tsc --watch",
         "format": "prettier --write .",
         "lint": "eslint src/ package.json",
-        "prepare": "tsc"
+        "prepare": "tsc",
+        "test": "jest"
     },
     "dependencies": {
         "mendix": "^10.16.49747"
@@ -41,6 +42,7 @@
         "@mendix/eslint-config-web-widgets": "workspace:*",
         "@mendix/prettier-config-web-widgets": "workspace:*",
         "@mendix/tsconfig-web-widgets": "workspace:*",
+        "@mendix/widget-plugin-test-utils": "workspace:*",
         "@swc/core": "^1.7.26"
     }
 }
