--- a/packages/pluggableWidgets/rich-text-web/package.json
+++ b/packages/pluggableWidgets/rich-text-web/package.json
@@ -43,10 +43,14 @@
         "verify": "rui-verify-package-format"
     },
     "dependencies": {
+        "@codemirror/lang-html": "^6.4.9",
         "@floating-ui/react": "^0.26.27",
         "@melloware/coloris": "^0.24.0",
+        "@uiw/codemirror-theme-github": "^4.21.25",
+        "@uiw/react-codemirror": "^4.21.25",
         "classnames": "^2.2.6",
         "dompurify": "^3.2.4",
+        "js-beautify": "^1.15.4",
         "katex": "^0.16.11",
         "linkifyjs": "^4.1.3",
         "lodash.merge": "^4.6.2",
@@ -68,6 +72,7 @@
         "@rollup/plugin-json": "^6.1.0",
         "@rollup/plugin-replace": "^6.0.2",
         "@types/dompurify": "^2.4.0",
+        "@types/js-beautify": "^1.14.3",
         "@types/katex": "^0.16.7",
         "@types/sanitize-html": "^1.27.2",
         "cross-env": "^7.0.3",
