--- a/packages/pluggableWidgets/charts-web/package.json
+++ b/packages/pluggableWidgets/charts-web/package.json
@@ -40,7 +40,7 @@
     "scripts": {
         "build": "ts-node --project scripts/tsconfig.json scripts/build.ts development",
         "create-gh-release": "rui-create-gh-release",
-        "format": "prettier --write .",
+        "format": "prettier --ignore-path ./node_modules/@mendix/prettier-config-web-widgets/global-prettierignore --write .",
         "lint": "tsc --project scripts/tsconfig.json",
         "publish-marketplace": "rui-publish-marketplace",
         "release": "ts-node --project scripts/tsconfig.json scripts/build.ts production",
