--- a/packages/pluggableWidgets/document-viewer-web/package.json
+++ b/packages/pluggableWidgets/document-viewer-web/package.json
@@ -27,7 +27,7 @@
     "scripts": {
         "build": "pluggable-widgets-tools build:web",
         "dev": "pluggable-widgets-tools start:web",
-        "format": "prettier --write .",
+        "format": "prettier --ignore-path ./node_modules/@mendix/prettier-config-web-widgets/global-prettierignore --write .",
         "lint": "eslint src/ package.json",
         "release": "pluggable-widgets-tools release:web",
         "start": "pluggable-widgets-tools start:server",
