chore: reformat based on new prettier

--- a/packages/shared/charts/package.json
+++ b/packages/shared/charts/package.json
@@ -28,7 +28,7 @@
         "copy": "copy-and-watch \"src/**/*.{scss,svg}\" \"dist/\"",
         "predev": "pnpm clear && pnpm copy",
         "dev": "tsc --build --verbose --watch tsconfig.json",
-        "format": "prettier --write .",
+        "format": "prettier --ignore-path ./node_modules/@mendix/prettier-config-web-widgets/global-prettierignore --write .",
         "lint": "eslint . package.json && tsc --noEmit",
         "prepare": "turbo build",
         "release": "pnpm build",
