--- a/packages/pluggableWidgets/gallery-web/package.json
+++ b/packages/pluggableWidgets/gallery-web/package.json
@@ -43,6 +43,7 @@
     "dependencies": {
         "@mendix/widget-plugin-external-events": "workspace:*",
         "@mendix/widget-plugin-filtering": "workspace:*",
+        "@mendix/widget-plugin-mobx-kit": "workspace:^",
         "@mendix/widget-plugin-sorting": "workspace:*",
         "classnames": "^2.3.2",
         "mobx": "6.12.3",
