--- a/packages/pluggableWidgets/video-player-web/package.json
+++ b/packages/pluggableWidgets/video-player-web/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@mendix/video-player-web",
     "widgetName": "VideoPlayer",
-    "version": "3.2.2",
+    "version": "3.2.3",
     "description": "Player for YouTube, Dailymotion, Vimeo and Mp4 videos",
     "copyright": "© Mendix Technology BV 2025. All rights reserved.",
     "license": "Apache-2.0",
@@ -43,9 +43,7 @@
         "verify": "rui-verify-package-format"
     },
     "dependencies": {
-        "@types/react-test-renderer": "^18.0.7",
-        "classnames": "^2.3.2",
-        "react-test-renderer": "^18.2.0"
+        "classnames": "^2.3.2"
     },
     "devDependencies": {
         "@mendix/automation-utils": "workspace:*",
