--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
             "react": "^18.0.0",
             "react-dom": "^18.0.0",
             "prettier": "3.5.3",
+            "@prettier/plugin-xml": "^3.4.1",
             "@types/node": "~22.14.0",
             "@types/react": ">=18.2.36",
             "@types/big.js": "^6.2.2",
