feat(calendar-web): add mendix dependency and update package versions

--- a/packages/pluggableWidgets/calendar-web/package.json
+++ b/packages/pluggableWidgets/calendar-web/package.json
@@ -48,6 +48,7 @@
     "dependencies": {
         "classnames": "^2.3.2",
         "date-fns": "^4.1.0",
+        "mendix": "^10.16.49747",
         "react-big-calendar": "^1.17.1"
     },
     "devDependencies": {
@@ -62,11 +63,5 @@
         "@mendix/widget-plugin-test-utils": "workspace:*",
         "@types/react-big-calendar": "^1.16.1",
         "cross-env": "^7.0.3"
-    },
-    "pnpm": {
-        "overrides": {
-            "@prettier/plugin-xml": "^3.4.1",
-            "prettier": "3.5.3"
-        }
     }
 }
