--- a/packages/pluggableWidgets/datagrid-dropdown-filter-web/package.json
+++ b/packages/pluggableWidgets/datagrid-dropdown-filter-web/package.json
@@ -1,21 +1,22 @@
 {
     "name": "@mendix/datagrid-dropdown-filter-web",
     "widgetName": "DatagridDropdownFilter",
-    "version": "2.9.4",
+    "version": "2.10.1",
     "description": "",
-    "copyright": "© Mendix Technology BV 2023. All rights reserved.",
+    "copyright": "© Mendix Technology BV 2025. All rights reserved.",
+    "license": "Apache-2.0",
     "private": true,
     "repository": {
         "type": "git",
         "url": "https://github.com/mendix/web-widgets.git"
     },
-    "license": "Apache-2.0",
     "config": {},
     "mxpackage": {
         "name": "DatagridDropdownFilter",
         "type": "widget",
         "mpkName": "com.mendix.widget.web.DatagridDropdownFilter.mpk"
     },
+    "packagePath": "com.mendix.widget.web",
     "marketplace": {
         "minimumMXVersion": "9.17.0",
         "appName": "Drop-down Filter"
@@ -24,21 +25,20 @@
         "githubUrl": "https://github.com/mendix/testProjects",
         "branchName": "datagrid-dropdown-filter-web"
     },
-    "packagePath": "com.mendix.widget.web",
     "scripts": {
-        "start": "pluggable-widgets-tools start:server",
-        "dev": "pluggable-widgets-tools start:ts",
         "build": "pluggable-widgets-tools build:ts",
-        "format": "prettier --write .",
-        "lint": "eslint --ext .jsx,.js,.ts,.tsx src/",
-        "test": "jest",
-        "release": "pluggable-widgets-tools release:ts",
-        "verify": "rui-verify-package-format",
-        "update-changelog": "rui-update-changelog-widget",
+        "create-translation": "rui-create-translation",
+        "dev": "pluggable-widgets-tools start:ts",
         "e2e": "run-e2e ci",
-        "e2edev": "run-e2e dev --with-preps",
         "e2e-update-project": "pnpm --filter data-widgets run build:include-deps",
-        "create-translation": "rui-create-translation"
+        "e2edev": "run-e2e dev --with-preps",
+        "format": "prettier --ignore-path ./node_modules/@mendix/prettier-config-web-widgets/global-prettierignore --write .",
+        "lint": "eslint src/ package.json",
+        "release": "pluggable-widgets-tools release:ts",
+        "start": "pluggable-widgets-tools start:server",
+        "test": "jest",
+        "update-changelog": "rui-update-changelog-widget",
+        "verify": "rui-verify-package-format"
     },
     "dependencies": {
         "@mendix/widget-plugin-external-events": "workspace:*",
@@ -48,7 +48,7 @@
     "devDependencies": {
         "@mendix/automation-utils": "workspace:*",
         "@mendix/eslint-config-web-widgets": "workspace:*",
-        "@mendix/pluggable-widgets-tools": "10.16.0",
+        "@mendix/pluggable-widgets-tools": "*",
         "@mendix/prettier-config-web-widgets": "workspace:*",
         "@mendix/run-e2e": "workspace:*",
         "@mendix/widget-plugin-component-kit": "workspace:*",
