--- a/packages/pluggableWidgets/datagrid-date-filter-web/package.json
+++ b/packages/pluggableWidgets/datagrid-date-filter-web/package.json
@@ -33,7 +33,7 @@
         "e2e-update-project": "pnpm --filter data-widgets run build:include-deps",
         "e2edev": "run-e2e dev --with-preps",
         "format": "prettier --ignore-path ./node_modules/@mendix/prettier-config-web-widgets/global-prettierignore --write .",
-        "lint": "eslint src/ package.json",
+        "lint": "eslint --ext .jsx,.js,.ts,.tsx src/",
         "release": "pluggable-widgets-tools release:ts",
         "start": "pluggable-widgets-tools start:server",
         "test": "jest",
