--- a/packages/shared/widget-plugin-filtering/package.json
+++ b/packages/shared/widget-plugin-filtering/package.json
@@ -27,7 +27,7 @@
         "build": "tsc",
         "dev": "tsc --watch",
         "format": "prettier --write .",
-        "lint": "eslint src/ package.json",
+        "lint": "eslint --ext .jsx,.js,.ts,.tsx src/",
         "prepare": "tsc",
         "test": "jest"
     },
