chore: update test command to use enzyme-free configuration for multiple widgets

--- a/packages/pluggableWidgets/language-selector-web/package.json
+++ b/packages/pluggableWidgets/language-selector-web/package.json
@@ -37,7 +37,7 @@
         "publish-marketplace": "rui-publish-marketplace",
         "release": "pluggable-widgets-tools release:web",
         "start": "pluggable-widgets-tools start:server",
-        "test": "jest --projects jest.config.js",
+        "test": "pluggable-widgets-tools test:unit:web:enzyme-free",
         "update-changelog": "rui-update-changelog-widget",
         "verify": "rui-verify-package-format"
     },
