--- a/packages/pluggableWidgets/bar-chart-web/package.json
+++ b/packages/pluggableWidgets/bar-chart-web/package.json
@@ -33,7 +33,7 @@
         "lint": "eslint src/ package.json",
         "release": "pluggable-widgets-tools release:web",
         "start": "pluggable-widgets-tools start:server",
-        "test": "jest --projects jest.config.js",
+        "test": "pluggable-widgets-tools test:unit:web:enzyme-free",
         "update-changelog": "rui-update-changelog-widget",
         "verify": "rui-verify-package-format"
     },
