chore: do adjustments to target 2.30.x

--- a/.github/workflows/CreateGitHubRelease.yml
+++ b/.github/workflows/CreateGitHubRelease.yml
@@ -6,6 +6,7 @@ on:
         inputs:
             package:
                 description: "Package name to release (name in package.json)"
+                default: "data-widgets"
                 required: true
 jobs:
     create-release:
