--- a/packages/pluggableWidgets/datagrid-web/package.json
+++ b/packages/pluggableWidgets/datagrid-web/package.json
@@ -36,7 +36,7 @@
         "lint": "eslint src/ package.json",
         "release": "pluggable-widgets-tools release:ts",
         "start": "pluggable-widgets-tools start:server",
-        "test": "jest",
+        "test": "jest --projects jest.config.js",
         "update-changelog": "rui-update-changelog-widget",
         "verify": "rui-verify-package-format"
     },
