chore: use naming convention for test project branches

--- a/packages/pluggableWidgets/dropdown-sort-web/package.json
+++ b/packages/pluggableWidgets/dropdown-sort-web/package.json
@@ -23,7 +23,7 @@
     },
     "testProject": {
         "githubUrl": "https://github.com/mendix/testProjects",
-        "branchName": "dropdown-sort-web"
+        "branchName": "dropdown-sort-web/main"
     },
     "scripts": {
         "build": "pluggable-widgets-tools build:ts",
