--- a/packages/pluggableWidgets/datagrid-web/package.json
+++ b/packages/pluggableWidgets/datagrid-web/package.json
@@ -23,7 +23,7 @@
     },
     "testProject": {
         "githubUrl": "https://github.com/mendix/testProjects",
-        "branchName": "datagrid-web-referenceSet"
+        "branchName": "datagrid-web/data-widgets-2.30"
     },
     "scripts": {
         "build": "pluggable-widgets-tools build:ts",
