chore: add missing scripts

--- a/packages/shared/widget-plugin-filtering/package.json
+++ b/packages/shared/widget-plugin-filtering/package.json
@@ -28,6 +28,7 @@
         "dev": "tsc --watch",
         "format": "prettier --write .",
         "lint": "eslint src/ package.json",
+        "prepare": "tsc",
         "test": "jest"
     },
     "dependencies": {
