--- a/packages/shared/widget-plugin-dropdown-filter/package.json
+++ b/packages/shared/widget-plugin-dropdown-filter/package.json
@@ -24,6 +24,7 @@
         "dev": "tsc --watch",
         "format": "prettier --write .",
         "lint": "eslint src/ package.json",
+        "prepare": "tsc",
         "test": "jest"
     },
     "dependencies": {
