--- a/packages/shared/widget-plugin-grid/package.json
+++ b/packages/shared/widget-plugin-grid/package.json
@@ -26,7 +26,7 @@
         }
     },
     "scripts": {
-        "compile": "tsc",
+        "build": "tsc",
         "dev": "tsc --watch",
         "format": "prettier --write .",
         "lint": "eslint src/ package.json",
