--- a/packages/shared/widget-plugin-hooks/package.json
+++ b/packages/shared/widget-plugin-hooks/package.json
@@ -24,7 +24,7 @@
         }
     },
     "scripts": {
-        "compile": "tsc",
+        "build": "tsc",
         "dev": "tsc --watch",
         "format": "prettier --write .",
         "lint": "eslint src/ package.json",
