--- a/packages/pluggableWidgets/custom-chart-web/package.json
+++ b/packages/pluggableWidgets/custom-chart-web/package.json
@@ -45,7 +45,9 @@
     },
     "dependencies": {
         "@mendix/shared-charts": "workspace:*",
+        "@mendix/widget-plugin-component-kit": "workspace:*",
         "@mendix/widget-plugin-mobx-kit": "workspace:*",
+        "@mendix/widget-plugin-platform": "workspace:*",
         "classnames": "^2.3.2",
         "plotly.js-dist-min": "^3.0.0"
     },
