--- a/packages/pluggableWidgets/fieldset-web/package.json
+++ b/packages/pluggableWidgets/fieldset-web/package.json
@@ -41,6 +41,9 @@
         "update-changelog": "rui-update-changelog-widget",
         "verify": "rui-verify-package-format"
     },
+    "dependencies": {
+        "@mendix/widget-plugin-component-kit": "workspace:*"
+    },
     "devDependencies": {
         "@mendix/automation-utils": "workspace:*",
         "@mendix/eslint-config-web-widgets": "workspace:*",
