--- a/packages/pluggableWidgets/language-selector-web/package.json
+++ b/packages/pluggableWidgets/language-selector-web/package.json
@@ -43,6 +43,7 @@
     },
     "dependencies": {
         "@floating-ui/react": "^0.26.27",
+        "@mendix/widget-plugin-component-kit": "workspace:*",
         "classnames": "^2.3.2"
     },
     "devDependencies": {
