--- a/packages/pluggableWidgets/line-chart-web/package.json
+++ b/packages/pluggableWidgets/line-chart-web/package.json
@@ -41,6 +41,7 @@
     },
     "dependencies": {
         "@mendix/shared-charts": "workspace:*",
+        "@mendix/widget-plugin-component-kit": "workspace:*",
         "classnames": "^2.3.2",
         "plotly.js-dist-min": "^3.0.0"
     },
