--- a/packages/pluggableWidgets/slider-web/package.json
+++ b/packages/pluggableWidgets/slider-web/package.json
@@ -43,6 +43,7 @@
         "verify": "rui-verify-package-format"
     },
     "dependencies": {
+        "@mendix/widget-plugin-component-kit": "workspace:*",
         "classnames": "^2.3.2",
         "rc-slider": "^8.7.1",
         "rc-tooltip": "^3.7.3"
