--- a/packages/pluggableWidgets/tree-node-web/package.json
+++ b/packages/pluggableWidgets/tree-node-web/package.json
@@ -41,6 +41,7 @@
         "verify": "rui-verify-package-format"
     },
     "dependencies": {
+        "@mendix/widget-plugin-component-kit": "workspace:*",
         "classnames": "^2.3.2"
     },
     "devDependencies": {
