--- a/packages/pluggableWidgets/custom-chart-web/package.json
+++ b/packages/pluggableWidgets/custom-chart-web/package.json
@@ -50,6 +50,7 @@
         "plotly.js-dist-min": "^3.0.0"
     },
     "devDependencies": {
+        "@happy-dom/jest-environment": "^18.0.1",
         "@mendix/pluggable-widgets-tools": "*",
         "@mendix/prettier-config-web-widgets": "workspace:*",
         "@mendix/run-e2e": "workspace:^*",
