--- a/packages/pluggableWidgets/line-chart-web/package.json
+++ b/packages/pluggableWidgets/line-chart-web/package.json
@@ -35,7 +35,7 @@
         "lint": "eslint src/ package.json",
         "release": "pluggable-widgets-tools release:web",
         "start": "pluggable-widgets-tools start:server",
-        "test": "pluggable-widgets-tools test:unit:web",
+        "test": "jest --projects jest.config.js",
         "update-changelog": "rui-update-changelog-widget",
         "verify": "rui-verify-package-format"
     },
@@ -45,6 +45,7 @@
         "plotly.js-dist-min": "^3.0.0"
     },
     "devDependencies": {
+        "@happy-dom/jest-environment": "^18.0.1",
         "@mendix/automation-utils": "workspace:*",
         "@mendix/eslint-config-web-widgets": "workspace:*",
         "@mendix/pluggable-widgets-tools": "*",
