chore: renovate ignore react dependencies

--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -26,7 +26,7 @@
     },
     "allowScripts": true,
     "ignoreScripts": false,
-    "ignoreDeps": ["typescript"],
+    "ignoreDeps": ["typescript", "react", "react-dom", "@types/react", "@types/react-dom"],
     "ignorePaths": ["**/customWidgets/**"],
     "packageRules": [
         { "matchCategories": ["docker"], "enabled": false },
