build: fix issue with build and release commands

--- a/turbo.json
+++ b/turbo.json
@@ -12,7 +12,7 @@
             "outputs": ["dist/**", "!dist/tmp/**"]
         },
         "release": {
-            "dependsOn": ["^build", "verify"],
+            "dependsOn": ["build", "^build", "verify"],
             "outputs": ["dist/**", "!dist/tmp/**"]
         },
         "build:module": {
