--- a/package.json
+++ b/package.json
@@ -70,5 +70,6 @@
         "onlyBuiltDependencies": [
             "canvas"
         ]
-    }
+    },
+    "prettier": "@mendix/prettier-config-web-widgets"
 }
